welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: not found: value fini
fini=false
^BDRBuggle:4: error: not found: value fini
while(fini!=false){
      ^BDRBuggle:37: error: not found: value fini
		fini=true
                ^